# MercafacilChallenge

./: README.md  docker-compose.yml
customer-auth-service-api/: Dockerfile  pyproject.toml  requirements.txt  run.py
customer-auth-service-api/api/: urls.py
customer-auth-service-api/api/interfaces/: cryptography.py
customer-auth-service-api/api/models/: user.py
customer-auth-service-api/api/utils/: auth.py  scripts.py
customer-auth-service-api/tests/http/: POST.http
customer-service-api/: Dockerfile  gunicorn.py  pyproject.toml  requirements.txt  run.py
customer-service-api/api/: config.py  urls.py
customer-service-api/api/core/: contact.py  customer.py
customer-service-api/api/core/validators/: email_validator.py  phone_number_validator.py  validator_root.py
customer-service-api/api/domains/contacts/: view.py
customer-service-api/api/infra/db/: factory.py  mysql_drive.py  postgres_drive.py
customer-service-api/api/infra/formaters/: phone_formater.py
customer-service-api/api/ports/: db.py  phone_formater_port.py
customer-service-api/api/utils/: auth.py
customer-service-api/ports/: db.py  validators_port.py
customer-service-api/scripts/: integration_tests.sh  tests.sh  unit_tests.sh
customer-service-api/tests/http/: POST.http
customer-service-api/tests/integration/: test_mysql.py  test_postgres.py
customer-service-api/tests/unit/: customer_test.py  test_contact.py
rick-and-morty-web-app/: README.md  package.json
rick-and-morty-web-app/public/: index.html
rick-and-morty-web-app/src/: App.vue
(+21 files in other folders)
