[tool.poetry]
name = "customer-service-api"
version = "0.1.0"
description = ""
authors = ["OscarSilvaOfficial <oscarkaka222@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
phonenumbers = "^8.12.44"
fast-sql-manager = "^1.3.6"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-instafail = "^0.4.2"
pytest-sugar = "^0.9.4"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"